# langchain-develop-llm-powered-applications-with-langchain-course

./: .gitignore  README.md
code-interpreter-agent/: README.md  code_interpreter_agent.py  langsmith_client.py  llm_client.py  main.py  pyproject.toml  settings.py
fhir-resources-protocol-assistant/: README.md  frontend.py  main.py  pinecone_ingestion.py  pyproject.toml  scrape.py
fhir-resources-protocol-assistant/business/clients/: llm_client.py  vector_store_client.py
fhir-resources-protocol-assistant/business/schemas/: llm.py
fhir-resources-protocol-assistant/business/services/: orchestrator_service.py
fhir-resources-protocol-assistant/config/: settings.py
fhir-resources-protocol-assistant/scrapers/: fhir_scraper.py
healthcare-protocol-assistant/: README.md  pyproject.toml
ice-breaker/: .env.template  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
ice-breaker/public/: index.html
ice-breaker/src/: main.py  output_parsers.py  utils.py
ice-breaker/src/agents/: research_gate_lookup_agent.py
ice-breaker/src/business/: dependencies.py
ice-breaker/src/business/agents/: research_gate_lookup_agent.py
ice-breaker/src/business/clients/: llm_client.py  scraper_client.py
ice-breaker/src/business/output_parsers/: ice_breaker.py
ice-breaker/src/business/services/: orchestrator_service.py
ice-breaker/src/business/tools/: tavily.py
ice-breaker/src/clients/: langsmith_client.py  llm_client.py  scraper_client.py
ice-breaker/src/config/: settings.py
ice-breaker/src/presentation/: dependencies.py
ice-breaker/src/presentation/routers/: health.py
ice-breaker/src/presentation/routers/v1/: ice_breaker.py
ice-breaker/src/presentation/schemas/: ice_breaker.py
ice-breaker/src/tools/: tavily.py
langgraph-react-agent/: llm.py  main.py  nodes.py  pyproject.toml  state.py
mcp-sse-server/: client.py  math_server.py  pyproject.toml
medium-analyzer/: ingestion.py  medium_analyzer.py  pyproject.toml
medium-analyzer/clients/: llm_client.py
medium-analyzer/config/: settings.py
rag/: pdf_ingestion.py  pyproject.toml  rag.py  text_file_ingestion.py
rag/faiss_index/: index.faiss  index.pkl
react-agent/: README.md  pyproject.toml  react_agent.py
react-agent/clients/: llm_client.py
react-agent/config/: settings.py
