[project]
name = "fhir-resources-protocol-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.23",
    "langchain-community>=0.3.24",
    "langchain-pinecone>=0.2.6",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "pdfplumber>=0.11.6",
    "pinecone>=6.0.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "unstructured>=0.17.2",
    "urllib3>=2.4.0",
]
