[project]
name = "ice-breaker"
version = "0.0.1"
description = "Ice breaker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.24",
    "langchain-aws>=0.2.22",
    "langchain-community>=0.3.23",
    "langsmith>=0.3.39",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
]
