[project]
name = "langgraph-react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.24",
    "langchain-community>=0.3.24",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.4.7",
    "loguru>=0.7.3",
]
